--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "start": "node app.js",
     "dev": "nodemon app.js",
     "test": "jest",
-    "migrate": "node scripts/migrate.js"
+    "migrate": "node scripts/migrate.js",
+    "update-health-table": "node scripts/update-health-table.js"
   },
   "dependencies": {
     "axios": "^1.5.0",
