--- a/load-testing/.env
+++ b/load-testing/.env
@@ -3,7 +3,7 @@ API_BASE_URL=http://localhost:3000/v1
 DB_HOST=localhost 
 DB_PORT=3306 
 DB_USERNAME=root 
-DB_PASSWORD=abcd1234 
+DB_PASSWORD=abcd1234! 
 DB_DATABASE=health_guard_db 
 TEST_BATCH_SIZE=10 
 ENABLE_DATABASE_INSERT=true 
