--- a/load-testing/.env.example
+++ b/load-testing/.env.example
@@ -1,37 +1,62 @@
-# 健康守护压力测试系统环境配置
+# Health Guard Enhanced Load Testing Environment Configuration
+# ================================================================
 
-# API服务配置
-API_BASE_URL=http://localhost:3000/v1
-API_TIMEOUT=10000
-
-# 数据库配置
+# Database Configuration
 DB_HOST=localhost
 DB_PORT=3306
 DB_USERNAME=root
 DB_PASSWORD=abcd1234!
 DB_DATABASE=health_guard_db
 
-# 测试配置
-TEST_BATCH_SIZE=20
-MAX_VIRTUAL_USERS=500
+# API Configuration
+API_BASE_URL=http://localhost:3000/v1
+API_TIMEOUT=10000
+
+# Load Testing Configuration
+TEST_BATCH_SIZE=10
+MAX_USERS_PER_BATCH=500
 ENABLE_DATABASE_INSERT=true
-ENABLE_API_CALL=false
+ENABLE_API_CALLS=false
 
-# 调度配置
-CLEANUP_SCHEDULE="0 2 * * *"
-USER_GENERATION_SCHEDULE="*/30 * * * *"
-LOAD_TEST_SCHEDULE="0 * * * *"
-STRESS_TEST_SCHEDULE="0 */6 * * *"
+# User Generation Settings
+DEFAULT_USER_COUNT=50
+MAX_CUSTOM_USER_COUNT=200
 
-# 日志配置
-ENABLE_CONSOLE_LOG=true
-ENABLE_FILE_LOG=true
+# Enhanced User Generation Options
+INCLUDE_SUBSCRIPTIONS=true
+INCLUDE_PAYMENTS=true
+INCLUDE_ADDRESSES=true
+INCLUDE_HEALTH_DATA=true
+
+# Subscription Generation Settings
+MAX_SUBSCRIPTIONS_PER_USER=3
+SUBSCRIPTION_HISTORY_ENABLED=true
+
+# Payment Generation Settings
+MIN_PAYMENTS_PER_USER=1
+MAX_PAYMENTS_PER_USER=8
+INCLUDE_RANDOM_PAYMENTS=true
+
+# Address Generation Settings
+MIN_ADDRESSES_PER_USER=1
+MAX_ADDRESSES_PER_USER=3
+GUARANTEE_DEFAULT_ADDRESS=true
+
+# Health Data Generation Settings
+HEALTH_DATA_DAYS_BACK=90
+MIN_HEALTH_RECORDS_PER_DAY=0
+MAX_HEALTH_RECORDS_PER_DAY=3
+
+# Cleanup Settings
+CLEANUP_CONFIRMATION_REQUIRED=true
+ENABLE_SAFE_MODE=true
+
+# Logging and Debug
 LOG_LEVEL=info
+DEBUG_MODE=false
+SHOW_PROGRESS=true
 
-# 通知配置
-ENABLE_EMAIL_NOTIFICATIONS=false
-EMAIL_SMTP_HOST=smtp.gmail.com
-EMAIL_SMTP_PORT=587
-EMAIL_USER=your-email@gmail.com
-EMAIL_PASSWORD=your-app-password
-EMAIL_TO=admin@example.com
+# Performance Settings
+CONNECTION_POOL_SIZE=10
+QUERY_TIMEOUT=30000
+BATCH_DELAY_MS=100
