--- a/recorder_client/app.json
+++ b/recorder_client/app.json
@@ -1,5 +1,6 @@
 {
   "pages": [
+    "pages/picker-test/picker-test",
     "pages/index/index",
     "pages/login/login",
     "pages/forgot-password/forgot-password",
